# django-graphql

./: pyproject.toml
django_graphql/: settings.py  urls.py
django_graphql/base/: apps.py  models.py  schema.py
django_graphql/base/migrations/: 0001_initial.py
django_graphql/onetomany/: models.py
